Fix text spacing and sizes

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 html {
+  font-family: Georgia, serif;
   color: #fff;
 }
 
